crates/ruff_python_parser/tests/snapshots/invalid_syntax@args_unparenthesized_generator.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/args_unparenthesized_generator.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..92,
        body: [
            Expr(
                StmtExpr {
                    node_index: NodeIndex(None),
                    range: 0..28,
                    value: Call(
                        ExprCall {
                            node_index: NodeIndex(None),
                            range: 0..28,
                            func: Name(
                                ExprName {
                                    node_index: NodeIndex(None),
                                    range: 0..3,
                                    id: Name("sum"),
                                    ctx: Load,
                                },
                            ),
                            arguments: Arguments {
                                range: 3..28,
                                node_index: NodeIndex(None),
                                args: [
                                    Generator(
                                        ExprGenerator {
                                            node_index: NodeIndex(None),
                                            range: 4..24,
                                            elt: Name(
                                                ExprName {
                                                    node_index: NodeIndex(None),
                                                    range: 4..5,
                                                    id: Name("x"),
                                                    ctx: Load,
                                                },
                                            ),
                                            generators: [
                                                Comprehension {
                                                    range: 6..24,
                                                    node_index: NodeIndex(None),
                                                    target: Name(
                                                        ExprName {
                                                            node_index: NodeIndex(None),
                                                            range: 10..11,
                                                            id: Name("x"),
                                                            ctx: Store,
                                                        },
                                                    ),
                                                    iter: Call(
                                                        ExprCall {
                                                            node_index: NodeIndex(None),
                                                            range: 15..24,
                                                            func: Name(
                                                                ExprName {
                                                                    node_index: NodeIndex(None),
                                                                    range: 15..20,
                                                                    id: Name("range"),
                                                                    ctx: Load,
                                                                },
                                                            ),
                                                            arguments: Arguments {
                                                                range: 20..24,
                                                                node_index: NodeIndex(None),
                                                                args: [
                                                                    NumberLiteral(
                                                                        ExprNumberLiteral {
                                                                            node_index: NodeIndex(None),
                                                                            range: 21..23,
                                                                            value: Int(
                                                                                10,
                                                                            ),
                                                                        },
                                                                    ),
                                                                ],
                                                                keywords: [],
                                                            },
                                                        },
                                                    ),
                                                    ifs: [],
                                                    is_async: false,
                                                },
                                            ],
                                            parenthesized: false,
                                        },
                                    ),
                                    NumberLiteral(
                                        ExprNumberLiteral {
                                            node_index: NodeIndex(None),
                                            range: 26..27,
                                            value: Int(
                                                5,
                                            ),
                                        },
                                    ),
                                ],
                                keywords: [],
                            },
                        },
                    ),
                },
            ),
            Expr(
                StmtExpr {
                    node_index: NodeIndex(None),
                    range: 29..64,
                    value: Call(
                        ExprCall {
                            node_index: NodeIndex(None),
                            range: 29..64,
                            func: Name(
                                ExprName {
                                    node_index: NodeIndex(None),
                                    range: 29..34,
                                    id: Name("total"),
                                    ctx: Load,
                                },
                            ),
                            arguments: Arguments {
                                range: 34..64,
                                node_index: NodeIndex(None),
                                args: [
                                    NumberLiteral(
                                        ExprNumberLiteral {
                                            node_index: NodeIndex(None),
                                            range: 35..36,
                                            value: Int(
                                                1,
                                            ),
                                        },
                                    ),
                                    NumberLiteral(
                                        ExprNumberLiteral {
                                            node_index: NodeIndex(None),
                                            range: 38..39,
                                            value: Int(
                                                2,
                                            ),
                                        },
                                    ),
                                    Generator(
                                        ExprGenerator {
                                            node_index: NodeIndex(None),
                                            range: 41..60,
                                            elt: Name(
                                                ExprName {
                                                    node_index: NodeIndex(None),
                                                    range: 41..42,
                                                    id: Name("x"),
                                                    ctx: Load,
                                                },
                                            ),
                                            generators: [
                                                Comprehension {
                                                    range: 43..60,
                                                    node_index: NodeIndex(None),
                                                    target: Name(
                                                        ExprName {
                                                            node_index: NodeIndex(None),
                                                            range: 47..48,
                                                            id: Name("x"),
                                                            ctx: Store,
                                                        },
                                                    ),
                                                    iter: Call(
                                                        ExprCall {
                                                            node_index: NodeIndex(None),
                                                            range: 52..60,
                                                            func: Name(
                                                                ExprName {
                                                                    node_index: NodeIndex(None),
                                                                    range: 52..57,
                                                                    id: Name("range"),
                                                                    ctx: Load,
                                                                },
                                                            ),
                                                            arguments: Arguments {
                                                                range: 57..60,
                                                                node_index: NodeIndex(None),
                                                                args: [
                                                                    NumberLiteral(
                                                                        ExprNumberLiteral {
                                                                            node_index: NodeIndex(None),
                                                                            range: 58..59,
                                                                            value: Int(
                                                                                5,
                                                                            ),
                                                                        },
                                                                    ),
                                                                ],
                                                                keywords: [],
                                                            },
                                                        },
                                                    ),
                                                    ifs: [],
                                                    is_async: false,
                                                },
                                            ],
                                            parenthesized: false,
                                        },
                                    ),
                                    NumberLiteral(
                                        ExprNumberLiteral {
                                            node_index: NodeIndex(None),
                                            range: 62..63,
                                            value: Int(
                                                6,
                                            ),
                                        },
                                    ),
                                ],
                                keywords: [],
                            },
                        },
                    ),
                },
            ),
            Expr(
                StmtExpr {
                    node_index: NodeIndex(None),
                    range: 65..91,
                    value: Call(
                        ExprCall {
                            node_index: NodeIndex(None),
                            range: 65..91,
                            func: Name(
                                ExprName {
                                    node_index: NodeIndex(None),
                                    range: 65..68,
                                    id: Name("sum"),
                                    ctx: Load,
                                },
                            ),
                            arguments: Arguments {
                                range: 68..91,
                                node_index: NodeIndex(None),
                                args: [
                                    Generator(
                                        ExprGenerator {
                                            node_index: NodeIndex(None),
                                            range: 69..89,
                                            elt: Name(
                                                ExprName {
                                                    node_index: NodeIndex(None),
                                                    range: 69..70,
                                                    id: Name("x"),
                                                    ctx: Load,
                                                },
                                            ),
                                            generators: [
                                                Comprehension {
                                                    range: 71..89,
                                                    node_index: NodeIndex(None),
                                                    target: Name(
                                                        ExprName {
                                                            node_index: NodeIndex(None),
                                                            range: 75..76,
                                                            id: Name("x"),
                                                            ctx: Store,
                                                        },
                                                    ),
                                                    iter: Call(
                                                        ExprCall {
                                                            node_index: NodeIndex(None),
                                                            range: 80..89,
                                                            func: Name(
                                                                ExprName {
                                                                    node_index: NodeIndex(None),
                                                                    range: 80..85,
                                                                    id: Name("range"),
                                                                    ctx: Load,
                                                                },
                                                            ),
                                                            arguments: Arguments {
                                                                range: 85..89,
                                                                node_index: NodeIndex(None),
                                                                args: [
                                                                    NumberLiteral(
                                                                        ExprNumberLiteral {
                                                                            node_index: NodeIndex(None),
                                                                            range: 86..88,
                                                                            value: Int(
                                                                                10,
                                                                            ),
                                                                        },
                                                                    ),
                                                                ],
                                                                keywords: [],
                                                            },
                                                        },
                                                    ),
                                                    ifs: [],
                                                    is_async: false,
                                                },
                                            ],
                                            parenthesized: false,
                                        },
                                    ),
                                ],
                                keywords: [],
                            },
                        },
                    ),
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | sum(x for x in range(10), 5)
  |     ^^^^^^^^^^^^^^^^^^^^ Syntax Error: Unparenthesized generator expression cannot be used here
2 | total(1, 2, x for x in range(5), 6)
3 | sum(x for x in range(10),)
  |


  |
1 | sum(x for x in range(10), 5)
2 | total(1, 2, x for x in range(5), 6)
  |             ^^^^^^^^^^^^^^^^^^^ Syntax Error: Unparenthesized generator expression cannot be used here
3 | sum(x for x in range(10),)
  |


  |
1 | sum(x for x in range(10), 5)
2 | total(1, 2, x for x in range(5), 6)
3 | sum(x for x in range(10),)
  |     ^^^^^^^^^^^^^^^^^^^^ Syntax Error: Unparenthesized generator expression cannot be used here
