crates/ruff_python_parser/tests/snapshots/invalid_syntax@aug_assign_debug.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/aug_assign_debug.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..15,
        body: [
            AugAssign(
                StmtAugAssign {
                    node_index: NodeIndex(None),
                    range: 0..14,
                    target: Name(
                        ExprName {
                            node_index: NodeIndex(None),
                            range: 0..9,
                            id: Name("__debug__"),
                            ctx: Store,
                        },
                    ),
                    op: Add,
                    value: NumberLiteral(
                        ExprNumberLiteral {
                            node_index: NodeIndex(None),
                            range: 13..14,
                            value: Int(
                                1,
                            ),
                        },
                    ),
                },
            ),
        ],
    },
)
```
## Semantic Syntax Errors

  |
1 | __debug__ += 1
  | ^^^^^^^^^ Syntax Error: cannot assign to `__debug__`
