crates/ruff_python_parser/tests/snapshots/invalid_syntax@del_debug_attribute_py314.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/del_debug_attribute_py314.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..60,
        body: [
            Delete(
                StmtDelete {
                    node_index: NodeIndex(None),
                    range: 44..59,
                    targets: [
                        Attribute(
                            ExprAttribute {
                                node_index: NodeIndex(None),
                                range: 48..59,
                                value: Name(
                                    ExprName {
                                        node_index: NodeIndex(None),
                                        range: 48..49,
                                        id: Name("x"),
                                        ctx: Load,
                                    },
                                ),
                                attr: Identifier {
                                    id: Name("__debug__"),
                                    range: 50..59,
                                    node_index: NodeIndex(None),
                                },
                                ctx: Del,
                            },
                        ),
                    ],
                },
            ),
        ],
    },
)
```
## Semantic Syntax Errors

  |
1 | # parse_options: {"target-version": "3.14"}
2 | del x.__debug__
  |     ^^^^^^^^^^^ Syntax Error: cannot delete `__debug__` on Python 3.14 (syntax was removed in 3.14)
